# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//brave/components/web_discovery/buildflags/buildflags.gni")
import("//brave/components/webcompat_reporter/buildflags/buildflags.gni")
import("//build/config/android/rules.gni")

declare_args() {
  brave_android_developer_options_code = ""
}

java_cpp_enum("brave_android_java_enums_srcjar") {
  sources = [
    "//brave/chromium_src/chrome/browser/notifications/notification_handler_impl.h",
    "//brave/components/decentralized_dns/core/constants.h",
  ]
}

java_cpp_template("brave_config_java") {
  sources = [ "//brave/build/android/java/templates/BraveConfig.template" ]
  defines = [
    "BRAVE_ANDROID_DEVELOPER_OPTIONS_CODE=\"$brave_android_developer_options_code\"",
    "BRAVE_ANDROID_WEBCOMPAT_REPORT_ENDPOINT=\"$webcompat_report_api_endpoint\"",
    "BRAVE_ANDROID_WEB_DISCOVERY_ENABLED=$enable_web_discovery_native",
  ]
}

# Brave-specific resources.
android_resources("java_resources") {
  sources = [
    "java/brave-res/anim/slide_in_bottom.xml",
    "java/brave-res/anim/slide_in_top.xml",
    "java/brave-res/anim/slide_out_bottom.xml",
    "java/brave-res/anim/slide_out_top.xml",
    "java/brave-res/color/brave_switch_stroke_color.xml",
    "java/brave-res/color/crypto_wallet_onboarding_button_text_color.xml",
    "java/brave-res/color/wallet_checkbox_background_color_selector.xml",
    "java/brave-res/color/wallet_checkbox_color_selector.xml",
    "java/brave-res/color/wallet_onboarding_input_field_stroke_color.xml",
    "java/brave-res/color/wallet_onboarding_network_item_stroke_selector.xml",
    "java/brave-res/drawable-hdpi/brave_ads_launch_graphic.png",
    "java/brave-res/drawable-hdpi/brave_sync_btn_laptop.png",
    "java/brave-res/drawable-hdpi/btn_bat.png",
    "java/brave-res/drawable-hdpi/btn_bookmark.png",
    "java/brave-res/drawable-hdpi/btn_bookmark_fill.png",
    "java/brave-res/drawable-hdpi/btn_brave.png",
    "java/brave-res/drawable-hdpi/btn_brave_off.png",
    "java/brave-res/drawable-hdpi/btn_mic.png",
    "java/brave-res/drawable-hdpi/camera.png",
    "java/brave-res/drawable-hdpi/check.png",
    "java/brave-res/drawable-hdpi/checkbox.png",
    "java/brave-res/drawable-hdpi/copy_paste.png",
    "java/brave-res/drawable-hdpi/ic_ad_free_videos.png",
    "java/brave-res/drawable-hdpi/ic_brave_onboarding.png",
    "java/brave-res/drawable-hdpi/ic_onboarding_bottom_leaf.png",
    "java/brave-res/drawable-hdpi/ic_onboarding_top_leaf.png",
    "java/brave-res/drawable-hdpi/share_activity_background.png",
    "java/brave-res/drawable-mdpi/brave_ads_launch_graphic.png",
    "java/brave-res/drawable-mdpi/brave_sync_btn_laptop.png",
    "java/brave-res/drawable-mdpi/btn_bat.png",
    "java/brave-res/drawable-mdpi/btn_bookmark.png",
    "java/brave-res/drawable-mdpi/btn_bookmark_fill.png",
    "java/brave-res/drawable-mdpi/btn_brave.png",
    "java/brave-res/drawable-mdpi/btn_brave_off.png",
    "java/brave-res/drawable-mdpi/btn_mic.png",
    "java/brave-res/drawable-mdpi/camera.png",
    "java/brave-res/drawable-mdpi/check.png",
    "java/brave-res/drawable-mdpi/checkbox.png",
    "java/brave-res/drawable-mdpi/copy_paste.png",
    "java/brave-res/drawable-mdpi/ic_ad_free_videos.png",
    "java/brave-res/drawable-mdpi/ic_brave_onboarding.png",
    "java/brave-res/drawable-mdpi/ic_onboarding_bottom_leaf.png",
    "java/brave-res/drawable-mdpi/ic_onboarding_top_leaf.png",
    "java/brave-res/drawable-mdpi/share_activity_background.png",
    "java/brave-res/drawable-night-nodpi/ic_quick_action_search_and_bookmark_widget_preview.png",
    "java/brave-res/drawable-night-nodpi/widget_preview.png",
    "java/brave-res/drawable-night/bookmark_empty_state_illustration.xml",
    "java/brave-res/drawable-night/ellipse_217.xml",
    "java/brave-res/drawable-night/history_empty_state_illustration.xml",
    "java/brave-res/drawable-night/ic_vpn_always_on_1.xml",
    "java/brave-res/drawable-night/ic_vpn_always_on_2.xml",
    "java/brave-res/drawable-night/ic_vpn_always_on_3.xml",
    "java/brave-res/drawable-night/ic_youtube_skip_ads.xml",
    "java/brave-res/drawable-night/incognito_history_placeholder_image.xml",
    "java/brave-res/drawable-night/new_wallet.xml",
    "java/brave-res/drawable-night/phone_recent_tab_empty_state_illustration.xml",
    "java/brave-res/drawable-night/reading_list_empty_state_illustration.xml",
    "java/brave-res/drawable-night/restore_wallet.xml",
    "java/brave-res/drawable-night/tablet_recent_tab_empty_state_illustration.xml",
    "java/brave-res/drawable-night/wallet_portfolio.xml",
    "java/brave-res/drawable-nodpi/dylan_malval_sea_min.webp",
    "java/brave-res/drawable-nodpi/eth.png",
    "java/brave-res/drawable-nodpi/ic_quick_action_search_and_bookmark_widget_preview.png",
    "java/brave-res/drawable-xhdpi/brave_ads_launch_graphic.png",
    "java/brave-res/drawable-xhdpi/brave_sync_btn_laptop.png",
    "java/brave-res/drawable-xhdpi/btn_bat.png",
    "java/brave-res/drawable-xhdpi/btn_bookmark.png",
    "java/brave-res/drawable-xhdpi/btn_bookmark_fill.png",
    "java/brave-res/drawable-xhdpi/btn_brave.png",
    "java/brave-res/drawable-xhdpi/btn_brave_off.png",
    "java/brave-res/drawable-xhdpi/btn_mic.png",
    "java/brave-res/drawable-xhdpi/camera.png",
    "java/brave-res/drawable-xhdpi/check.png",
    "java/brave-res/drawable-xhdpi/checkbox.png",
    "java/brave-res/drawable-xhdpi/copy_paste.png",
    "java/brave-res/drawable-xhdpi/ic_ad_free_videos.png",
    "java/brave-res/drawable-xhdpi/ic_brave_onboarding.png",
    "java/brave-res/drawable-xhdpi/ic_onboarding_bottom_leaf.png",
    "java/brave-res/drawable-xhdpi/ic_onboarding_top_leaf.png",
    "java/brave-res/drawable-xhdpi/share_activity_background.png",
    "java/brave-res/drawable-xxhdpi/brave_ads_launch_graphic.png",
    "java/brave-res/drawable-xxhdpi/brave_sync_btn_laptop.png",
    "java/brave-res/drawable-xxhdpi/btn_bat.png",
    "java/brave-res/drawable-xxhdpi/btn_bookmark.png",
    "java/brave-res/drawable-xxhdpi/btn_bookmark_fill.png",
    "java/brave-res/drawable-xxhdpi/btn_brave.png",
    "java/brave-res/drawable-xxhdpi/btn_brave_off.png",
    "java/brave-res/drawable-xxhdpi/btn_mic.png",
    "java/brave-res/drawable-xxhdpi/camera.png",
    "java/brave-res/drawable-xxhdpi/check.png",
    "java/brave-res/drawable-xxhdpi/checkbox.png",
    "java/brave-res/drawable-xxhdpi/copy_paste.png",
    "java/brave-res/drawable-xxhdpi/ic_ad_free_videos.png",
    "java/brave-res/drawable-xxhdpi/ic_brave_onboarding.png",
    "java/brave-res/drawable-xxhdpi/ic_onboarding_bottom_leaf.png",
    "java/brave-res/drawable-xxhdpi/ic_onboarding_top_leaf.png",
    "java/brave-res/drawable-xxhdpi/share_activity_background.png",
    "java/brave-res/drawable-xxxhdpi/brave_ads_launch_graphic.png",
    "java/brave-res/drawable-xxxhdpi/brave_sync_btn_laptop.png",
    "java/brave-res/drawable-xxxhdpi/btn_bat.png",
    "java/brave-res/drawable-xxxhdpi/btn_bookmark.png",
    "java/brave-res/drawable-xxxhdpi/btn_bookmark_fill.png",
    "java/brave-res/drawable-xxxhdpi/btn_brave.png",
    "java/brave-res/drawable-xxxhdpi/btn_brave_off.png",
    "java/brave-res/drawable-xxxhdpi/btn_mic.png",
    "java/brave-res/drawable-xxxhdpi/camera.png",
    "java/brave-res/drawable-xxxhdpi/check.png",
    "java/brave-res/drawable-xxxhdpi/checkbox.png",
    "java/brave-res/drawable-xxxhdpi/copy_paste.png",
    "java/brave-res/drawable-xxxhdpi/ic_ad_free_videos.png",
    "java/brave-res/drawable-xxxhdpi/ic_brave_onboarding.png",
    "java/brave-res/drawable-xxxhdpi/ic_onboarding_bottom_leaf.png",
    "java/brave-res/drawable-xxxhdpi/ic_onboarding_top_leaf.png",
    "java/brave-res/drawable-xxxhdpi/share_activity_background.png",
    "java/brave-res/drawable/ad_free_card_bg.xml",
    "java/brave-res/drawable/add_custom_filter_button_background_disabled.xml",
    "java/brave-res/drawable/add_custom_filter_button_background_selector.xml",
    "java/brave-res/drawable/add_widget_button.xml",
    "java/brave-res/drawable/ads_custom_notification_border.xml",
    "java/brave-res/drawable/ads_custom_notification_border_dark.xml",
    "java/brave-res/drawable/always_on_tab_dot.xml",
    "java/brave-res/drawable/always_on_tab_selected_dot.xml",
    "java/brave-res/drawable/always_on_tab_selector.xml",
    "java/brave-res/drawable/always_on_tutorial_action_bg.xml",
    "java/brave-res/drawable/antenna_layer_list.xml",
    "java/brave-res/drawable/bar_chart.xml",
    "java/brave-res/drawable/bat_ads_logo_button.xml",
    "java/brave-res/drawable/blue_48_rounded_bg.xml",
    "java/brave-res/drawable/blue_rounded_notification_bg.xml",
    "java/brave-res/drawable/bookmark_menu_bg.xml",
    "java/brave-res/drawable/brave_checkbox.xml",
    "java/brave-res/drawable/brave_icon_search.xml",
    "java/brave-res/drawable/brave_menu_bookmarks.xml",
    "java/brave-res/drawable/brave_menu_downloads.xml",
    "java/brave-res/drawable/brave_menu_exit.xml",
    "java/brave-res/drawable/brave_menu_history.xml",
    "java/brave-res/drawable/brave_menu_new_private_tab.xml",
    "java/brave-res/drawable/brave_menu_recent_tabs.xml",
    "java/brave-res/drawable/brave_menu_rewards.xml",
    "java/brave-res/drawable/brave_menu_set_as_default.xml",
    "java/brave-res/drawable/brave_menu_settings.xml",
    "java/brave-res/drawable/brave_modern_toolbar_text_box_background.xml",
    "java/brave-res/drawable/brave_new_group_tab.xml",
    "java/brave-res/drawable/brave_news_settings_list_divider.xml",
    "java/brave-res/drawable/brave_news_settings_publisher_bg.xml",
    "java/brave-res/drawable/brave_news_settings_search_bg.xml",
    "java/brave-res/drawable/brave_news_settings_unfollow_bg.xml",
    "java/brave-res/drawable/brave_notification_permission_rationale_dialog_header.xml",
    "java/brave-res/drawable/brave_privacy_tabs_unlock_image.xml",
    "java/brave-res/drawable/brave_rating_emoji_bg.xml",
    "java/brave-res/drawable/brave_rating_rate_now_bg.xml",
    "java/brave-res/drawable/brave_rewards_circle.xml",
    "java/brave-res/drawable/brave_rewards_rectangle.xml",
    "java/brave-res/drawable/brave_shields_tooltip_text_bg.xml",
    "java/brave-res/drawable/brave_stats_radio_button_normal.xml",
    "java/brave-res/drawable/brave_stats_radio_button_selected.xml",
    "java/brave-res/drawable/brave_stats_radio_button_selector.xml",
    "java/brave-res/drawable/brave_stats_radio_group_bg.xml",
    "java/brave-res/drawable/brave_stats_rounded_bg.xml",
    "java/brave-res/drawable/brave_stats_ui_empty_bg.xml",
    "java/brave-res/drawable/brave_sync.xml",
    "java/brave-res/drawable/brave_sync_btn.xml",
    "java/brave-res/drawable/brave_sync_btn_mobile.xml",
    "java/brave-res/drawable/brave_sync_btn_transparent.xml",
    "java/brave-res/drawable/brave_sync_cover_general.xml",
    "java/brave-res/drawable/brave_sync_image_btn.xml",
    "java/brave-res/drawable/brave_sync_qr_rounded.xml",
    "java/brave-res/drawable/brave_sync_tab_indicator.xml",
    "java/brave-res/drawable/brave_sync_tab_layout_bg.xml",
    "java/brave-res/drawable/brave_sync_top_rounded.xml",
    "java/brave-res/drawable/brave_sync_top_rounded_light.xml",
    "java/brave-res/drawable/browser_group.xml",
    "java/brave-res/drawable/btn_right_tablet.xml",
    "java/brave-res/drawable/card_bg.xml",
    "java/brave-res/drawable/circular_progress.xml",
    "java/brave-res/drawable/country_spinner_background.xml",
    "java/brave-res/drawable/create_custom_filter_edit_bg.xml",
    "java/brave-res/drawable/crypto_wallet_blue_button.xml",
    "java/brave-res/drawable/crypto_wallet_hollow_button.xml",
    "java/brave-res/drawable/crypto_wallet_onboarding_blue_button.xml",
    "java/brave-res/drawable/dapps_permission_dialog_background.xml",
    "java/brave-res/drawable/default_dot.xml",
    "java/brave-res/drawable/default_indicator.xml",
    "java/brave-res/drawable/ellipse_217.xml",
    "java/brave-res/drawable/email_shield.xml",
    "java/brave-res/drawable/file_download.xml",
    "java/brave-res/drawable/file_upload.xml",
    "java/brave-res/drawable/fingerprint_unlock_layer_list.xml",
    "java/brave-res/drawable/ic_accessibility.xml",
    "java/brave-res/drawable/ic_addresses.xml",
    "java/brave-res/drawable/ic_always_on_info.xml",
    "java/brave-res/drawable/ic_antenna.xml",
    "java/brave-res/drawable/ic_appearance.xml",
    "java/brave-res/drawable/ic_arb_color.xml",
    "java/brave-res/drawable/ic_arrow_clock.xml",
    "java/brave-res/drawable/ic_arrow_down_circular_filled.xml",
    "java/brave-res/drawable/ic_arrow_down_circular_filled_transparent.xml",
    "java/brave-res/drawable/ic_arrow_forward.xml",
    "java/brave-res/drawable/ic_arrow_left_right_directions.xml",
    "java/brave-res/drawable/ic_aurora_color.xml",
    "java/brave-res/drawable/ic_autofill.xml",
    "java/brave-res/drawable/ic_avax_color.xml",
    "java/brave-res/drawable/ic_back.xml",
    "java/brave-res/drawable/ic_baseline_add_24.xml",
    "java/brave-res/drawable/ic_baseline_arrow_back_24.xml",
    "java/brave-res/drawable/ic_baseline_close_24.xml",
    "java/brave-res/drawable/ic_basic_check.xml",
    "java/brave-res/drawable/ic_bell_icon.xml",
    "java/brave-res/drawable/ic_biometric_login.xml",
    "java/brave-res/drawable/ic_bnbchain_color.xml",
    "java/brave-res/drawable/ic_bookmark_import_export_failed.xml",
    "java/brave-res/drawable/ic_bookmark_import_export_success.xml",
    "java/brave-res/drawable/ic_bookmark_menu_add.xml",
    "java/brave-res/drawable/ic_bookmark_menu_delete.xml",
    "java/brave-res/drawable/ic_bookmark_menu_edit.xml",
    "java/brave-res/drawable/ic_bookmark_menu_view.xml",
    "java/brave-res/drawable/ic_brave.xml",
    "java/brave-res/drawable/ic_brave_36.xml",
    "java/brave-res/drawable/ic_brave_ai.xml",
    "java/brave-res/drawable/ic_brave_battery.xml",
    "java/brave-res/drawable/ic_brave_logo.xml",
    "java/brave-res/drawable/ic_brave_mobiledata.xml",
    "java/brave-res/drawable/ic_brave_news_no_source.xml",
    "java/brave-res/drawable/ic_brave_notification.xml",
    "java/brave-res/drawable/ic_brave_password.xml",
    "java/brave-res/drawable/ic_brave_smiley_happy.xml",
    "java/brave-res/drawable/ic_brave_smiley_sad.xml",
    "java/brave-res/drawable/ic_brave_vpn_graphic.xml",
    "java/brave-res/drawable/ic_browser_customizable_shortcut.xml",
    "java/brave-res/drawable/ic_browser_mobile_tabs.xml",
    "java/brave-res/drawable/ic_browser_mobile_tabs_bottom.xml",
    "java/brave-res/drawable/ic_browser_mobile_tabs_top.xml",
    "java/brave-res/drawable/ic_btc_color.xml",
    "java/brave-res/drawable/ic_cancel_filled.xml",
    "java/brave-res/drawable/ic_carat_down.xml",
    "java/brave-res/drawable/ic_carat_down_country_spinner.xml",
    "java/brave-res/drawable/ic_carat_right.xml",
    "java/brave-res/drawable/ic_card_background.xml",
    "java/brave-res/drawable/ic_celo_color.xml",
    "java/brave-res/drawable/ic_channel_brave.xml",
    "java/brave-res/drawable/ic_channel_business.xml",
    "java/brave-res/drawable/ic_channel_cars.xml",
    "java/brave-res/drawable/ic_channel_crypto.xml",
    "java/brave-res/drawable/ic_channel_culture.xml",
    "java/brave-res/drawable/ic_channel_default.xml",
    "java/brave-res/drawable/ic_channel_entertainment.xml",
    "java/brave-res/drawable/ic_channel_fashion.xml",
    "java/brave-res/drawable/ic_channel_filmtv.xml",
    "java/brave-res/drawable/ic_channel_food.xml",
    "java/brave-res/drawable/ic_channel_fun.xml",
    "java/brave-res/drawable/ic_channel_gaming.xml",
    "java/brave-res/drawable/ic_channel_health.xml",
    "java/brave-res/drawable/ic_channel_home.xml",
    "java/brave-res/drawable/ic_channel_music.xml",
    "java/brave-res/drawable/ic_channel_politics.xml",
    "java/brave-res/drawable/ic_channel_science.xml",
    "java/brave-res/drawable/ic_channel_sports.xml",
    "java/brave-res/drawable/ic_channel_tech_reviews.xml",
    "java/brave-res/drawable/ic_channel_technology.xml",
    "java/brave-res/drawable/ic_channel_top_news.xml",
    "java/brave-res/drawable/ic_channel_travel.xml",
    "java/brave-res/drawable/ic_channel_us_news.xml",
    "java/brave-res/drawable/ic_channel_weather.xml",
    "java/brave-res/drawable/ic_channel_world_news.xml",
    "java/brave-res/drawable/ic_channels.xml",
    "java/brave-res/drawable/ic_check.xml",
    "java/brave-res/drawable/ic_check_white.xml",
    "java/brave-res/drawable/ic_checkbox_filled.xml",
    "java/brave-res/drawable/ic_checkbox_outline.xml",
    "java/brave-res/drawable/ic_checkmark_gradient.xml",
    "java/brave-res/drawable/ic_chevron_right.xml",
    "java/brave-res/drawable/ic_circle_down.xml",
    "java/brave-res/drawable/ic_circle_news_settings.xml",
    "java/brave-res/drawable/ic_clock.xml",
    "java/brave-res/drawable/ic_close.xml",
    "java/brave-res/drawable/ic_closing_all_closes_brave.xml",
    "java/brave-res/drawable/ic_coinbase.xml",
    "java/brave-res/drawable/ic_crypto_wallets.xml",
    "java/brave-res/drawable/ic_custom_tabs.xml",
    "java/brave-res/drawable/ic_disabled.xml",
    "java/brave-res/drawable/ic_discount.xml",
    "java/brave-res/drawable/ic_downloads.xml",
    "java/brave-res/drawable/ic_drag.xml",
    "java/brave-res/drawable/ic_edit_pencil.xml",
    "java/brave-res/drawable/ic_eth.xml",
    "java/brave-res/drawable/ic_eth_24.xml",
    "java/brave-res/drawable/ic_eth_color.xml",
    "java/brave-res/drawable/ic_expand_arrows.xml",
    "java/brave-res/drawable/ic_eye_off.xml",
    "java/brave-res/drawable/ic_eye_on.xml",
    "java/brave-res/drawable/ic_fil_asset_icon.xml",
    "java/brave-res/drawable/ic_filecoin_color.xml",
    "java/brave-res/drawable/ic_following.xml",
    "java/brave-res/drawable/ic_ftm_color.xml",
    "java/brave-res/drawable/ic_guardian.xml",
    "java/brave-res/drawable/ic_help.xml",
    "java/brave-res/drawable/ic_help_filled.xml",
    "java/brave-res/drawable/ic_home_screen_widget.xml",
    "java/brave-res/drawable/ic_homepage.xml",
    "java/brave-res/drawable/ic_idea.xml",
    "java/brave-res/drawable/ic_info.xml",
    "java/brave-res/drawable/ic_key.xml",
    "java/brave-res/drawable/ic_languages.xml",
    "java/brave-res/drawable/ic_laptop.xml",
    "java/brave-res/drawable/ic_mask.xml",
    "java/brave-res/drawable/ic_matic_color.xml",
    "java/brave-res/drawable/ic_media.xml",
    "java/brave-res/drawable/ic_menu.xml",
    "java/brave-res/drawable/ic_menu_close.xml",
    "java/brave-res/drawable/ic_message_bubble_comments.xml",
    "java/brave-res/drawable/ic_metamask.xml",
    "java/brave-res/drawable/ic_midnight_purple_circle.xml",
    "java/brave-res/drawable/ic_neon_color.xml",
    "java/brave-res/drawable/ic_new_tab_page.xml",
    "java/brave-res/drawable/ic_news.xml",
    "java/brave-res/drawable/ic_news_settings.xml",
    "java/brave-res/drawable/ic_notification.xml",
    "java/brave-res/drawable/ic_notification_icon.xml",
    "java/brave-res/drawable/ic_onboarding_arrow_down.xml",
    "java/brave-res/drawable/ic_onboarding_bg.xml",
    "java/brave-res/drawable/ic_op_color.xml",
    "java/brave-res/drawable/ic_p3a_checkbox.xml",
    "java/brave-res/drawable/ic_p3a_checkbox_filled.xml",
    "java/brave-res/drawable/ic_p3a_checkbox_outline.xml",
    "java/brave-res/drawable/ic_pause_filled.xml",
    "java/brave-res/drawable/ic_payment_methods.xml",
    "java/brave-res/drawable/ic_phantom.xml",
    "java/brave-res/drawable/ic_phone.xml",
    "java/brave-res/drawable/ic_picture_in_picture.xml",
    "java/brave-res/drawable/ic_plans.xml",
    "java/brave-res/drawable/ic_popular_sources.xml",
    "java/brave-res/drawable/ic_privacy_reports.xml",
    "java/brave-res/drawable/ic_product_brave_leo.xml",
    "java/brave-res/drawable/ic_product_private_window.xml",
    "java/brave-res/drawable/ic_product_vpn.xml",
    "java/brave-res/drawable/ic_promoted.xml",
    "java/brave-res/drawable/ic_qr_code.xml",
    "java/brave-res/drawable/ic_qr_code_18.xml",
    "java/brave-res/drawable/ic_rate.xml",
    "java/brave-res/drawable/ic_rewards.xml",
    "java/brave-res/drawable/ic_rocket.xml",
    "java/brave-res/drawable/ic_search_21dp.xml",
    "java/brave-res/drawable/ic_search_vector.xml",
    "java/brave-res/drawable/ic_search_widget_promotion_icon.xml",
    "java/brave-res/drawable/ic_settings.xml",
    "java/brave-res/drawable/ic_settings_dapps.xml",
    "java/brave-res/drawable/ic_share.xml",
    "java/brave-res/drawable/ic_shield_done.xml",
    "java/brave-res/drawable/ic_shield_done_filled.xml",
    "java/brave-res/drawable/ic_shield_done_outlined.xml",
    "java/brave-res/drawable/ic_site_settings.xml",
    "java/brave-res/drawable/ic_smartphone.xml",
    "java/brave-res/drawable/ic_sol_asset_icon.xml",
    "java/brave-res/drawable/ic_sol_color.xml",
    "java/brave-res/drawable/ic_stats_notification_background.xml",
    "java/brave-res/drawable/ic_suggestions.xml",
    "java/brave-res/drawable/ic_sync.xml",
    "java/brave-res/drawable/ic_tablet.xml",
    "java/brave-res/drawable/ic_thank_you.xml",
    "java/brave-res/drawable/ic_theme_system.xml",
    "java/brave-res/drawable/ic_tipping_error.xml",
    "java/brave-res/drawable/ic_toggle_down.xml",
    "java/brave-res/drawable/ic_toggle_up.xml",
    "java/brave-res/drawable/ic_trash_icon.xml",
    "java/brave-res/drawable/ic_visibility_off.xml",
    "java/brave-res/drawable/ic_vpn.xml",
    "java/brave-res/drawable/ic_vpn_always_on_1.xml",
    "java/brave-res/drawable/ic_vpn_always_on_2.xml",
    "java/brave-res/drawable/ic_vpn_always_on_3.xml",
    "java/brave-res/drawable/ic_vpn_promo.xml",
    "java/brave-res/drawable/ic_wallet_lock.xml",
    "java/brave-res/drawable/ic_wallet_settings.xml",
    "java/brave-res/drawable/ic_warning.xml",
    "java/brave-res/drawable/ic_warning_circle.xml",
    "java/brave-res/drawable/ic_warning_circle_filled.xml",
    "java/brave-res/drawable/ic_warning_circle_filled2.xml",
    "java/brave-res/drawable/ic_web.xml",
    "java/brave-res/drawable/ic_widget_generic.xml",
    "java/brave-res/drawable/ic_widget_generic_with_container.xml",
    "java/brave-res/drawable/ic_youtube_skip_ads.xml",
    "java/brave-res/drawable/ic_zec_color.xml",
    "java/brave-res/drawable/image_credit_rounded_shape.xml",
    "java/brave-res/drawable/learn_more_about_origin_bg.xml",
    "java/brave-res/drawable/leo_plan_active_bg.xml",
    "java/brave-res/drawable/leo_plan_non_active_bg.xml",
    "java/brave-res/drawable/leo_plan_premium_adv_bg.xml",
    "java/brave-res/drawable/leo_plan_upgrade_now_bg.xml",
    "java/brave-res/drawable/leo_yearly_bg.xml",
    "java/brave-res/drawable/modern_toolbar_background_grey_end_segment.xml",
    "java/brave-res/drawable/modern_toolbar_background_grey_middle_segment.xml",
    "java/brave-res/drawable/new_wallet.xml",
    "java/brave-res/drawable/news_button_bg.xml",
    "java/brave-res/drawable/news_settings_following_count_bg.xml",
    "java/brave-res/drawable/notification_button_rounded_bg.xml",
    "java/brave-res/drawable/notification_on_button_background.xml",
    "java/brave-res/drawable/notification_rationale_dialog_background.xml",
    "java/brave-res/drawable/onboarding_gradient_animation.xml",
    "java/brave-res/drawable/onboarding_gradient_background_center.xml",
    "java/brave-res/drawable/onboarding_gradient_background_end.xml",
    "java/brave-res/drawable/onboarding_gradient_background_start.xml",
    "java/brave-res/drawable/orange_rounded_button.xml",
    "java/brave-res/drawable/origin_plan_active_bg.xml",
    "java/brave-res/drawable/origin_plan_non_active_bg.xml",
    "java/brave-res/drawable/origin_plan_upgrade_now_bg.xml",
    "java/brave-res/drawable/password_match.xml",
    "java/brave-res/drawable/private_tab_gradient_background.xml",
    "java/brave-res/drawable/product_origin.xml",
    "java/brave-res/drawable/product_private_layer_list.xml",
    "java/brave-res/drawable/product_vpn_layer_list.xml",
    "java/brave-res/drawable/progress_bar_medium.xml",
    "java/brave-res/drawable/progress_bar_strong.xml",
    "java/brave-res/drawable/progress_bar_weak.xml",
    "java/brave-res/drawable/quick_action_search_and_bookmark_widget_bookmark_bg.xml",
    "java/brave-res/drawable/rating_bottomsheet_background.xml",
    "java/brave-res/drawable/rating_news_button_background.xml",
    "java/brave-res/drawable/recovery_phrase_bg.xml",
    "java/brave-res/drawable/rectangle_9.xml",
    "java/brave-res/drawable/rectangle_selected_9.xml",
    "java/brave-res/drawable/refresh_credentials_bg.xml",
    "java/brave-res/drawable/refresh_credentials_origin_bg.xml",
    "java/brave-res/drawable/restore_wallet.xml",
    "java/brave-res/drawable/rewards_verified_tick_icon.xml",
    "java/brave-res/drawable/rounded_bookmark_import_export_dialog_bg.xml",
    "java/brave-res/drawable/rounded_dark_bg_alpha.xml",
    "java/brave-res/drawable/rounded_dot_error_status.xml",
    "java/brave-res/drawable/rounded_dot_success_status.xml",
    "java/brave-res/drawable/rounded_filled.xml",
    "java/brave-res/drawable/rounded_holo_button.xml",
    "java/brave-res/drawable/rounded_onboarding_welcome_bg.xml",
    "java/brave-res/drawable/rounded_set_default_top_corners.xml",
    "java/brave-res/drawable/rounded_shape.xml",
    "java/brave-res/drawable/rounded_top_corners.xml",
    "java/brave-res/drawable/rounded_wallet_edittext.xml",
    "java/brave-res/drawable/selected_dot.xml",
    "java/brave-res/drawable/selected_indicator.xml",
    "java/brave-res/drawable/set_default_rounded_button_disabled.xml",
    "java/brave-res/drawable/shields_tooltip_background.xml",
    "java/brave-res/drawable/stats_bottomsheet_background.xml",
    "java/brave-res/drawable/stats_notification_on_button_bg.xml",
    "java/brave-res/drawable/sync_code_countdown_bg.xml",
    "java/brave-res/drawable/sync_code_expired_bg.xml",
    "java/brave-res/drawable/tab_gradient_separator.xml",
    "java/brave-res/drawable/timer_rounded_bottomsheet.xml",
    "java/brave-res/drawable/transparent_bg_bordered.xml",
    "java/brave-res/drawable/vpn_paywall_bg.xml",
    "java/brave-res/drawable/vpn_paywall_selected_bg.xml",
    "java/brave-res/drawable/vpn_plan_action_gradient.xml",
    "java/brave-res/drawable/wallet_portfolio.xml",
    "java/brave-res/drawable/wallet_sign_msg_err_bg.xml",
    "java/brave-res/drawable/wallet_toolbar_panel_gradient_bg.xml",
    "java/brave-res/drawable/wallet_top_banner_bg.xml",
    "java/brave-res/drawable/warning_circle_filled.xml",
    "java/brave-res/drawable/web_notification_small_icon_background.xml",
    "java/brave-res/drawable/white_rounded_holo_button_thin.xml",
    "java/brave-res/layout-land/activity_brave_leo_plans.xml",
    "java/brave-res/layout-land/activity_brave_origin_plans.xml",
    "java/brave-res/layout-land/activity_vpn_paywall.xml",
    "java/brave-res/layout-land/brave_shields_stats_row.xml",
    "java/brave-res/layout-sw600dp-land/brave_shields_stats_row.xml",
    "java/brave-res/layout-sw600dp/brave_shields_stats_row.xml",
    "java/brave-res/layout/activity_account_selector.xml",
    "java/brave-res/layout/activity_add_account.xml",
    "java/brave-res/layout/activity_advance_tx_setting.xml",
    "java/brave-res/layout/activity_auto_reconnect_vpn.xml",
    "java/brave-res/layout/activity_brave_leo_plans.xml",
    "java/brave-res/layout/activity_brave_origin_plans.xml",
    "java/brave-res/layout/activity_brave_vpn_profile.xml",
    "java/brave-res/layout/activity_brave_vpn_support.xml",
    "java/brave-res/layout/activity_brave_wallet.xml",
    "java/brave-res/layout/activity_brave_wallet_dapps.xml",
    "java/brave-res/layout/activity_network_selector.xml",
    "java/brave-res/layout/activity_onboarding.xml",
    "java/brave-res/layout/activity_playlist_host.xml",
    "java/brave-res/layout/activity_split_tunnel.xml",
    "java/brave-res/layout/activity_vpn_paywall.xml",
    "java/brave-res/layout/activity_vpn_server.xml",
    "java/brave-res/layout/activity_vpn_server_selection.xml",
    "java/brave-res/layout/activity_welcome_onboarding.xml",
    "java/brave-res/layout/application_item_layout.xml",
    "java/brave-res/layout/approve_tx_bottom_sheet.xml",
    "java/brave-res/layout/auto_reconnect_vpn_tutorial_item_layout.xml",
    "java/brave-res/layout/bottom_toolbar.xml",
    "java/brave-res/layout/bottom_toolbar_browsing.xml",
    "java/brave-res/layout/bottom_toolbar_menu_button.xml",
    "java/brave-res/layout/bottom_toolbar_tab_switcher.xml",
    "java/brave-res/layout/brave_ads_custom_notification.xml",
    "java/brave-res/layout/brave_ads_custom_notification_dark.xml",
    "java/brave-res/layout/brave_ads_existing_user_dialog_layout.xml",
    "java/brave-res/layout/brave_ads_new_user_dialog_layout.xml",
    "java/brave-res/layout/brave_ask_play_store_rating_dialog.xml",
    "java/brave-res/layout/brave_autofill_service_item.xml",
    "java/brave-res/layout/brave_bookmark_toolbar.xml",
    "java/brave-res/layout/brave_bottom_new_tab_button.xml",
    "java/brave-res/layout/brave_custom_tabs_toolbar.xml",
    "java/brave-res/layout/brave_dialog_preference.xml",
    "java/brave-res/layout/brave_exit_confirmation.xml",
    "java/brave-res/layout/brave_homepage_mobile_bookmarks_button.xml",
    "java/brave-res/layout/brave_leo_clear_history_dialog.xml",
    "java/brave-res/layout/brave_leo_reset_dialog.xml",
    "java/brave-res/layout/brave_news_card_menu.xml",
    "java/brave-res/layout/brave_news_load_new_content.xml",
    "java/brave-res/layout/brave_news_no_sources.xml",
    "java/brave-res/layout/brave_news_row.xml",
    "java/brave-res/layout/brave_news_settings.xml",
    "java/brave-res/layout/brave_news_settings_details.xml",
    "java/brave-res/layout/brave_notification_permission_rationale_dialog.xml",
    "java/brave-res/layout/brave_notification_warning_dialog.xml",
    "java/brave-res/layout/brave_permission_prompt_dialog.xml",
    "java/brave-res/layout/brave_rating_dialog_fragment.xml",
    "java/brave-res/layout/brave_rating_news_layout.xml",
    "java/brave-res/layout/brave_rating_thanks_feedback_dialog.xml",
    "java/brave-res/layout/brave_shields_main_layout.xml",
    "java/brave-res/layout/brave_shields_option_layout.xml",
    "java/brave-res/layout/brave_shields_secondary_layout.xml",
    "java/brave-res/layout/brave_shields_stats_row.xml",
    "java/brave-res/layout/brave_shields_switcher.xml",
    "java/brave-res/layout/brave_shields_thank_you_layout.xml",
    "java/brave-res/layout/brave_shields_third_layout.xml",
    "java/brave-res/layout/brave_shields_toggle_layout.xml",
    "java/brave-res/layout/brave_shields_tooltip_layout.xml",
    "java/brave-res/layout/brave_stats_bottom_sheet.xml",
    "java/brave-res/layout/brave_stats_layout.xml",
    "java/brave-res/layout/brave_stats_notification_permission.xml",
    "java/brave-res/layout/brave_stats_pager_layout.xml",
    "java/brave-res/layout/brave_stats_share_layout.xml",
    "java/brave-res/layout/brave_sync_add_laptop.xml",
    "java/brave-res/layout/brave_sync_add_mobile.xml",
    "java/brave-res/layout/brave_sync_device.xml",
    "java/brave-res/layout/brave_sync_done.xml",
    "java/brave-res/layout/brave_sync_layout.xml",
    "java/brave-res/layout/brave_toolbar.xml",
    "java/brave-res/layout/brave_vpn_server_selection_item_layout.xml",
    "java/brave-res/layout/brave_wallet_accounts_list_item.xml",
    "java/brave-res/layout/brave_wallet_add_network.xml",
    "java/brave-res/layout/brave_wallet_autolock_layout.xml",
    "java/brave-res/layout/brave_wallet_connected_sites_list_item.xml",
    "java/brave-res/layout/brave_wallet_connected_sites_preference_layout.xml",
    "java/brave-res/layout/brave_wallet_edit_gas.xml",
    "java/brave-res/layout/brave_wallet_network_item.xml",
    "java/brave-res/layout/brave_wallet_network_label.xml",
    "java/brave-res/layout/brave_wallet_networks_preference_layout.xml",
    "java/brave-res/layout/brave_wallet_panel_layout.xml",
    "java/brave-res/layout/brave_wallet_preference_confirmation_text_layout.xml",
    "java/brave-res/layout/brave_wallet_reset_content.xml",
    "java/brave-res/layout/brave_wallet_toolbar.xml",
    "java/brave-res/layout/brave_webrtc_policy_preference.xml",
    "java/brave-res/layout/custom_layout_preference.xml",
    "java/brave-res/layout/dapps_dialog.xml",
    "java/brave-res/layout/dialog_skip_onboarding.xml",
    "java/brave-res/layout/fragment_ad_free_callout_dialog.xml",
    "java/brave-res/layout/fragment_add_custom_filter_lists.xml",
    "java/brave-res/layout/fragment_add_switch_ethereum_chain.xml",
    "java/brave-res/layout/fragment_add_token.xml",
    "java/brave-res/layout/fragment_backup_wallet.xml",
    "java/brave-res/layout/fragment_brave_ads_onboarding.xml",
    "java/brave-res/layout/fragment_brave_bookmark_import_export_dialog.xml",
    "java/brave-res/layout/fragment_brave_location_bar_qr_dialog.xml",
    "java/brave-res/layout/fragment_brave_multiwindow_dialog.xml",
    "java/brave-res/layout/fragment_brave_rewards_onboarding.xml",
    "java/brave-res/layout/fragment_brave_vpn_always_on_error_dialog.xml",
    "java/brave-res/layout/fragment_brave_vpn_confirm_dialog.xml",
    "java/brave-res/layout/fragment_brave_vpn_plan.xml",
    "java/brave-res/layout/fragment_confirmation_wallet.xml",
    "java/brave-res/layout/fragment_connect_account.xml",
    "java/brave-res/layout/fragment_content_filtering.xml",
    "java/brave-res/layout/fragment_create_account.xml",
    "java/brave-res/layout/fragment_create_custom_filters.xml",
    "java/brave-res/layout/fragment_creating_wallet.xml",
    "java/brave-res/layout/fragment_dormant_users_engagement_dialog.xml",
    "java/brave-res/layout/fragment_encryption_key.xml",
    "java/brave-res/layout/fragment_fingerprint_unlock.xml",
    "java/brave-res/layout/fragment_link_subscription_dialog.xml",
    "java/brave-res/layout/fragment_onboarding_network_selection.xml",
    "java/brave-res/layout/fragment_onboarding_v2.xml",
    "java/brave-res/layout/fragment_open_yt_in_brave_dialog.xml",
    "java/brave-res/layout/fragment_qr_code_share.xml",
    "java/brave-res/layout/fragment_recovery_phrase.xml",
    "java/brave-res/layout/fragment_restore_wallet.xml",
    "java/brave-res/layout/fragment_secure_password.xml",
    "java/brave-res/layout/fragment_set_default_browser_bottom_sheet.xml",
    "java/brave-res/layout/fragment_setup_wallet.xml",
    "java/brave-res/layout/fragment_sign_message.xml",
    "java/brave-res/layout/fragment_sign_message_error.xml",
    "java/brave-res/layout/fragment_sign_tx_message.xml",
    "java/brave-res/layout/fragment_siwe.xml",
    "java/brave-res/layout/fragment_sync_code_countdown.xml",
    "java/brave-res/layout/fragment_terms_of_use_wallet.xml",
    "java/brave-res/layout/fragment_timer_dialog_list_dialog.xml",
    "java/brave-res/layout/fragment_timer_dialog_list_dialog_item.xml",
    "java/brave-res/layout/fragment_transaction.xml",
    "java/brave-res/layout/fragment_transaction_details.xml",
    "java/brave-res/layout/fragment_troubleshooting_onboarding.xml",
    "java/brave-res/layout/fragment_two_line_item_list.xml",
    "java/brave-res/layout/fragment_two_line_item_sheet.xml",
    "java/brave-res/layout/fragment_unlock_wallet.xml",
    "java/brave-res/layout/fragment_verify_recovery_phrase.xml",
    "java/brave-res/layout/highlight_layout.xml",
    "java/brave-res/layout/icon_row_menu_footer.xml",
    "java/brave-res/layout/item_create_account.xml",
    "java/brave-res/layout/item_custom_filter.xml",
    "java/brave-res/layout/item_filter_list.xml",
    "java/brave-res/layout/item_filter_title.xml",
    "java/brave-res/layout/item_fragment_two_line_divider_item.xml",
    "java/brave-res/layout/item_fragment_two_line_item.xml",
    "java/brave-res/layout/item_fragment_two_line_single_text.xml",
    "java/brave-res/layout/item_network_selector.xml",
    "java/brave-res/layout/item_news_settings.xml",
    "java/brave-res/layout/item_news_settings_section.xml",
    "java/brave-res/layout/item_two_line_horizontal.xml",
    "java/brave-res/layout/label_network_selector.xml",
    "java/brave-res/layout/layout_search_widget_promo.xml",
    "java/brave-res/layout/menu_separator.xml",
    "java/brave-res/layout/network_spinner_items.xml",
    "java/brave-res/layout/news_loading.xml",
    "java/brave-res/layout/ntp_image_credit.xml",
    "java/brave-res/layout/optin_layout.xml",
    "java/brave-res/layout/password_no_result.xml",
    "java/brave-res/layout/password_strength_meter_layout.xml",
    "java/brave-res/layout/qa_code_check.xml",
    "java/brave-res/layout/qa_command_line.xml",
    "java/brave-res/layout/quick_action_search_and_bookmark_widget_layout.xml",
    "java/brave-res/layout/radio_button_group_ddns_resolve_method_preference.xml",
    "java/brave-res/layout/radio_button_group_opening_screen_preference.xml",
    "java/brave-res/layout/recovery_phrase_item_layout.xml",
    "java/brave-res/layout/report_broken_site_layout.xml",
    "java/brave-res/layout/report_broken_site_screenshot_view.xml",
    "java/brave-res/layout/report_error_page_layout.xml",
    "java/brave-res/layout/search_preference.xml",
    "java/brave-res/layout/selected_network_item.xml",
    "java/brave-res/layout/toolbar_space.xml",
    "java/brave-res/layout/tracker_item_layout.xml",
    "java/brave-res/layout/view_holder_account_selector.xml",
    "java/brave-res/layout/view_holder_onboarding_header_network_selector.xml",
    "java/brave-res/layout/view_holder_onboarding_network_selector.xml",
    "java/brave-res/layout/vpn_location_menu_item_action_layout.xml",
    "java/brave-res/layout/vpn_region_preference_layout.xml",
    "java/brave-res/layout/vpn_server_item_layout.xml",
    "java/brave-res/layout/vpn_settings_callout_modal_layout.xml",
    "java/brave-res/layout/web_notification_icon_frame_brave.xml",
    "java/brave-res/layout/web_notification_small_icon.xml",
    "java/brave-res/layout/widevine_permission_request_custom_view.xml",
    "java/brave-res/layout/widget_bookmark_grid_item.xml",
    "java/brave-res/menu/bookmark_tab_menu.xml",
    "java/brave-res/menu/exit_settings_menu.xml",
    "java/brave-res/menu/menu_brave_news_settings_search.xml",
    "java/brave-res/menu/menu_brave_vpn.xml",
    "java/brave-res/menu/menu_custom_filter_list.xml",
    "java/brave-res/menu/menu_dapps_panel.xml",
    "java/brave-res/menu/menu_network_selector.xml",
    "java/brave-res/menu/new_tab_menu.xml",
    "java/brave-res/menu/save_password_preferences_action_bar_menu.xml",
    "java/brave-res/menu/split_tunnel_menu.xml",
    "java/brave-res/menu/wallet_search.xml",
    "java/brave-res/values-h500dp/dimens.xml",
    "java/brave-res/values-h568dp/dimens.xml",
    "java/brave-res/values-h748dp/dimens.xml",
    "java/brave-res/values-h765dp/dimens.xml",
    "java/brave-res/values-h820dp/dimens.xml",
    "java/brave-res/values-v21/brave_styles.xml",
    "java/brave-res/values/array.xml",
    "java/brave-res/values/brave_attrs.xml",
    "java/brave-res/values/brave_ids.xml",
    "java/brave-res/values/brave_styles.xml",
    "java/brave-res/values/shimmer_attrs.xml",
    "java/brave-res/xml/background_images_preferences.xml",
    "java/brave-res/xml/brave_appearance_preferences.xml",
    "java/brave-res/xml/brave_download_preferences.xml",
    "java/brave-res/xml/brave_ethereum_preferences.xml",
    "java/brave-res/xml/brave_leo_default_model_preferences.xml",
    "java/brave-res/xml/brave_leo_preferences.xml",
    "java/brave-res/xml/brave_leo_radio_button_group_default_model_preference.xml",
    "java/brave-res/xml/brave_license_preferences.xml",
    "java/brave-res/xml/brave_main_preferences.xml",
    "java/brave-res/xml/brave_origin_preferences.xml",
    "java/brave-res/xml/brave_password_settings_preferences.xml",
    "java/brave-res/xml/brave_playlist_preferences.xml",
    "java/brave-res/xml/brave_privacy_preferences.xml",
    "java/brave-res/xml/brave_rewards_debug_preferences.xml",
    "java/brave-res/xml/brave_search_engines_preferences.xml",
    "java/brave-res/xml/brave_solana_preferences.xml",
    "java/brave-res/xml/brave_stats_preferences.xml",
    "java/brave-res/xml/brave_vpn_preferences.xml",
    "java/brave-res/xml/brave_wallet_networks_preference.xml",
    "java/brave-res/xml/brave_wallet_preferences.xml",
    "java/brave-res/xml/brave_webrtc_policy_preferences.xml",
    "java/brave-res/xml/ens_preferences.xml",
    "java/brave-res/xml/media_preferences.xml",
    "java/brave-res/xml/qa_preferences.xml",
    "java/brave-res/xml/quick_action_search_and_bookmark_widget_info.xml",
    "java/brave-res/xml/sns_preferences.xml",
    "java/brave-res/xml/unstoppable_domains_preferences.xml",
  ]
}
